    - Added the Makefile to the dist dependencies. (Slaven Rezic)
    - Reversing the find_perl() version check failure warning introced in
      6.10_03.  Too talkative, warned when nothing was wrong.
    * Fixing META.yml auto-addition when there's no newline at the end 
      of the MANIFEST [rt.cpan.org 2444]
    * Making it a bit more obvious in the MANIFEST where META.yml comes from.

6.10_03 Fri Apr 11 00:21:25 PDT 2003
    * Added NO_META WriteMakefile() option to suppress generation of
      META.yml. (Spoon, rt.cpan.org 2359)
    - Spurious linebreak in uninstall_from_sitedirs on VMS (Craig Berry)
    * A bit after 6.05 man page names would come out as lib::Foo::Bar
      if the module name didn't contain a ::.  Found with podulators.
      Fixed.
    * Skipping installation of RCS ,v files.
    * 'make ci' was busted between 6.05 and 6.06_01.  Fixed. (Andreas)
    - 'make test' was broken when there's no tests.  Introduced in 6.06_03.
      (Stas Bekman)
    - Solving some directory depth problems in tests on oldish VMS systems.
      (Craig Berry)
    - Fixing MM_MacOS so it compiles on UTF-8 systems. (Jarkko)
    - Making find_perl() more talkative when the version check fails
      miserably.
    - Fixing PERL_ARCHIVE on VMS so XS can compile again (Craig Berry)

6.10_02 Mon Apr  7 00:57:15 PDT 2003
    * Removed 2>&1 experiment introduced in 6.10_01 for all non-Unixen
      except for OS/2.  Thought Perl might emulate `... 2>&1`.  It doesn't.
      Just on OS/2.

6.10_01 Sun Apr  6 19:31:42 PDT 2003
    - Making install "Skip ... (unchanged)" message happen consistently
    - Checking file sizes as well as modification times when deciding
      to skip installing a file.
    - OS/2 was using $(RM) instead of $(RM_F) (Ilya)
    - OS/2 needs .dll removed on failed build (Ilya)
    - fixin() was assuming that rename() can overwrite the target (Ilya)
    - manifypods target was empty if there are no pods to manify.  Put in