@@ -5,6 +5,7 @@
     * Fixing META.yml auto-addition when there's no newline at the end 
       of the MANIFEST [rt.cpan.org 2444]
     * Making it a bit more obvious in the MANIFEST where META.yml comes from.
+    - Fixed $_ clobbering in ExtUtils::Manifest functions.
 
 6.10_03 Fri Apr 11 00:21:25 PDT 2003
     * Added NO_META WriteMakefile() option to suppress generation of
